# quote-demo

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: audio.py  drafts.py  health.py  messages.py  quotes.py
backend/app/core/: config.py
backend/app/db/: __init__.py  crud.py  database.py  models.py
backend/app/schemas/: customer.py  draft.py  pricing.py  quote.py
backend/app/services/: __init__.py  followup_service.py  message_service.py  pricing_service.py  quote_parser_service.py  quote_renderer_service.py  transcription_service.py
backend/tests/: test_drafts.py  test_health.py  test_pricing.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: AudioRecorder.jsx  InternalReview.jsx  NewQuoteForm.jsx  PricingWorksheet.jsx  QuoteDraft.jsx  QuotePreview.jsx
frontend/src/pages/: DemoPage.jsx
